--- a/src/starter-template/ContentIndicators.mustache
+++ b/src/starter-template/ContentIndicators.mustache
@@ -1,4 +1,4 @@
-<div class="mw-indicators mw-body-content">
+<div class="content__indicators mw-indicators mw-body-content">
     {{#array-indicators}}
     <div id="{{id}}" class="{{class}}">{{{html}}}</div>
     {{/array-indicators}}
