--- a/src/starter-template/Sidebar.mustache
+++ b/src/starter-template/Sidebar.mustache
@@ -1,2 +1,4 @@
-{{#data-portlets-sidebar.data-portlets-first}}{{>Portlet}}{{/data-portlets-sidebar.data-portlets-first}}
-{{#data-portlets-sidebar.array-portlets-rest}}{{>Portlet}}{{/data-portlets-sidebar.array-portlets-rest}}
+{{#data-portlets-sidebar}}
+{{#data-portlets-first}}{{>Portlet}}{{/data-portlets-first}}
+{{#array-portlets-rest}}{{>Portlet}}{{/array-portlets-rest}}
+{{/data-portlets-sidebar}}
