--- a/src/starter-template/skin.mustache
+++ b/src/starter-template/skin.mustache
@@ -1,23 +1,21 @@
-<header>
+{{>Notices}}
+<header class="mw-header">
 	{{>Logo}}
+	{{>PersonalMenu}}
 	{{>Search}}
 </header>
 <main id="content" class="mw-body">
-	{{>Notices}}
-	{{>ArticleHeader}}
-	{{{html-body-content}}}
-	{{{html-categories}}}
-	{{{html-after-content}}}
+	<header class="content__header">
+		{{>ContentIndicators}}
+		{{>ContentHeading}}
+		{{>ContentTagline}}
+		{{>ContentNamespaces}}
+		{{>ContentActions}}
+	</header>
+	{{>ContentBody}}
 </main>
 <nav>
-	{{#data-portlets}}
-	{{#data-portlets.data-personal}}{{>Portlet}}{{/data-portlets.data-personal}}
-	{{#data-namespaces}}{{>Portlet}}{{/data-namespaces}}
-	{{#data-variants}}{{>Portlet}}{{/data-variants}}
-	{{#data-views}}{{>Portlet}}{{/data-views}}
-	{{#data-actions}}{{>Portlet}}{{/data-actions}}
-	{{/data-portlets}}
 	{{>Sidebar}}
-	{{#data-portlets.data-languages}}{{>Portlet}}{{/data-portlets.data-languages}}
+	{{>Languages}}
 </nav>
 {{>Footer}}
