Switch from CSS to LESS for style input

--- a/src/starter-template/skin.less
+++ b/src/starter-template/skin.less
@@ -121,7 +121,16 @@ main {
 }
 
 .mw-portlet input[type=checkbox] {
-	display: none;
+	cursor: pointer;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	opacity: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 /* Content Actions */
