--- a/src/starter-template/skin.less
+++ b/src/starter-template/skin.less
@@ -130,16 +130,7 @@ main {
 }
 
 .mw-portlet input[type=checkbox] {
-	cursor: pointer;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 1;
-	opacity: 0;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
+	display: none;
 }
 
 /* Content Actions */
