--- a/src/starter-template/skin.less
+++ b/src/starter-template/skin.less
@@ -86,7 +86,7 @@ a {
     display: none;
   }
 
-  @media (max-width: 720px) {
+  @media (max-width: @width-breakpoint-tablet ) {
     margin-bottom: 10px;
   }
 }
