Logo in starter template should be center aligned

--- a/src/starter-template/skin.less
+++ b/src/starter-template/skin.less
@@ -73,6 +73,9 @@ a {
 #p-logo {
   min-width: 300px;
   margin-left: 40px;
+  min-height: 70px;
+  display: flex;
+  align-items: center;
 }
 
 .mw-portlet-personal {
