Use data-user-menu not data-personal-menu

--- a/src/starter-template/PersonalMenu.mustache
+++ b/src/starter-template/PersonalMenu.mustache
@@ -1,1 +1,1 @@
-{{#data-portlets.data-personal}}{{>Portlet}}{{/data-portlets.data-personal}}
+{{#data-portlets.data-user-menu}}{{>Portlet}}{{/data-portlets.data-user-menu}}
