--- a/src/starter-template/skin.less
+++ b/src/starter-template/skin.less
@@ -179,6 +179,11 @@ main {
     padding: 0 50px 0 0;
     margin: 0;
     border-bottom: 0;
+    float: left;
+  }
+
+  &__language-btn {
+    float: right;
   }
 
   &__indicators {
@@ -188,10 +193,14 @@ main {
   }
 
   &__tagline {
+    clear: both;
     color: @color-base;
     font-size: 0.85em;
     margin-bottom: 12px;
     line-height: 20px;
+    &:empty {
+      display: none;
+    }
   }
 
   &__actions {
