Separate variables and component styles from edit area

--- a/src/starter-template/skin.mustache
+++ b/src/starter-template/skin.mustache
@@ -1,7 +1,7 @@
 <header class="mw-header">
 	{{>Logo}}
 	{{>Notifications}}
-	{{>PersonalMenu}}
+	{{>Dropdown}}{{>PersonalMenu}}
 	{{>Search}}
 	{{>Sidebar}}
 </header>
