Features can be tweaked by the skin creator.

--- a/src/starter-template/skin.less
+++ b/src/starter-template/skin.less
@@ -1,3 +1,5 @@
+/** ResourceLoaderSkinModule: normalize,elements,content-tables,content-links,content-media,interface-message-box,interface-category,toc */
+
 html {
 	background: @background-color-base;
 	margin: 0;
