--- a/src/starter-template/Sidebar.less
+++ b/src/starter-template/Sidebar.less
@@ -44,6 +44,7 @@
 	width: 20px;
 	display: block;
 	height: 20px;
+	// stylelint-disable-next-line function-url-quotes
 	background-image: url( 'data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%2220%22 height=%2220%22 viewBox=%220 0 20 20%22%3E %3Ctitle%3E menu %3C/title%3E %3Cpath d=%22M1 3v2h18V3zm0 8h18V9H1zm0 6h18v-2H1z%22/%3E %3C/svg%3E' );
 }
 
