Tweak component styles

--- a/src/starter-template/AdminBarUser.less
+++ b/src/starter-template/AdminBarUser.less
@@ -1,4 +1,6 @@
 // stylelint-disable function-url-quotes
+@height-adminbar: 32px;
+@bg-adminbar: #1d2327;
 
 // userAvatarOutline
 .mw-adminbar-icon-user:before {
