--- a/src/starter-template/EditBar.less
+++ b/src/starter-template/EditBar.less
@@ -17,7 +17,8 @@
 		background-position: center;
 
 		a {
-			color: transparent;
+			// stylelint-disable-next-line declaration-no-important
+			color: transparent !important;
 		}
 	}
 
@@ -38,6 +39,7 @@
 		background-image: url( "data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='white'%3E%3Ctitle%3E history %3C/title%3E%3Cpath d='M9 6v5h.06l2.48 2.47 1.41-1.41L11 10.11V6z'/%3E%3Cpath d='M10 1a9 9 0 00-7.85 13.35L.5 16H6v-5.5l-2.38 2.38A7 7 0 1110 17v2a9 9 0 000-18z'/%3E%3C/svg%3E%0A" );
 	}
 
+	#ca-nstab-main,
 	#ca-nstab-help,
 	#ca-ve-edit,
 	#ca-view {
