Improve responsiveness of starter template

--- a/src/starter-template/Logo.less
+++ b/src/starter-template/Logo.less
@@ -2,7 +2,29 @@
 	min-width: 240px;
 	margin-left: 40px;
 	min-height: 70px;
-	display: flex;
-	align-items: center;
 	flex-grow: 1;
+
+	h1 {
+		font-size: 1rem;
+		margin: 0;
+		border: 0;
+		padding: 0 0 0 10px;
+	}
+
+	a {
+		display: flex;
+		align-content: center;
+		height: 70px;
+		align-items: center;
+	}
+
+	@media (max-width: @width-breakpoint-tablet) {
+		min-width: 170px;
+		max-width: none;
+		font-size: 0.75em;
+
+		.icon {
+			display: none;
+		}
+	}
 }
