--- a/src/starter-template/PersonalMenu.less
+++ b/src/starter-template/PersonalMenu.less
@@ -1,7 +1,7 @@
 
 .mw-portlet-personal {
 	margin: 0 0 0 12px;
-	padding: 0 12px 0 0;
+	padding: 10px 12px 10px 0;
 	height: 20px;
 	width: 20px;
 }
@@ -15,16 +15,12 @@
 		width: 40px;
 		margin: 0;
 		padding: 0;
-		background-position: center top;
+		background-position: center center;
 		overflow: hidden;
 		display: flex;
 	}
 
 	li {
 		display: block;
-	}
-
-	@media ( max-width: @width-breakpoint-tablet ) {
-		margin-bottom: 10px;
 	}
 }
