--- a/src/starter-template/Sidebar.less
+++ b/src/starter-template/Sidebar.less
@@ -2,7 +2,8 @@
 	position: fixed;
 	left: 0;
 	top: 0;
-	width: 30%;
+	min-width: 70%;
+	max-width: 320px;
 	bottom: 0;
 	background: #fff;
 	z-index: 4;
