--- a/src/starter-template/Notifications.less
+++ b/src/starter-template/Notifications.less
@@ -1,19 +1,49 @@
 .mw-portlet-notifications {
-	margin-top: -20px;
+
+	input[type=checkbox] {
+		display: none;
+	}
 
 	li {
 		width: 20px;
 		height: 20px;
+
+		@media (max-width: @width-breakpoint-tablet) {
+			width: 100%;
+			height: 40px;
+		}
 	}
 
 	#pt-notifications-alert {
 		margin-right: 20px;
+
+		@media (max-width: @width-breakpoint-tablet) {
+			margin-right: 0;
+		}
+	}
+
+
+	@media (max-width: @width-breakpoint-tablet) {
+		margin-top: 0;
+		width: 40px;
+		height: 40px;
+		position: relative;
+
+		* {
+			width: 100%;
+			height: 100%;
+		}
+		#pt-notifications-notice {
+			display: none;
+		}
 	}
 
 	a {
 		background-repeat: no-repeat;
 		color: transparent;
-		background-position: left center;
+		background-position: center center;
+		width: 100% !important;
+		height: 100% !important;
 		display: block;
 	}
 }
