[eslint/stylelint] run scripts

--- a/src/starter-template/Notifications.less
+++ b/src/starter-template/Notifications.less
@@ -1,6 +1,5 @@
 .mw-portlet-notifications {
-
-	input[type=checkbox] {
+	input[ type='checkbox' ] {
 		display: none;
 	}
 
@@ -8,7 +7,7 @@
 		width: 20px;
 		height: 20px;
 
-		@media (max-width: @width-breakpoint-tablet) {
+		@media ( max-width: @width-breakpoint-tablet ) {
 			width: 100%;
 			height: 40px;
 		}
@@ -17,13 +16,12 @@
 	#pt-notifications-alert {
 		margin-right: 20px;
 
-		@media (max-width: @width-breakpoint-tablet) {
+		@media ( max-width: @width-breakpoint-tablet ) {
 			margin-right: 0;
 		}
 	}
 
-
-	@media (max-width: @width-breakpoint-tablet) {
+	@media ( max-width: @width-breakpoint-tablet ) {
 		margin-top: 0;
 		width: 40px;
 		height: 40px;
@@ -33,6 +31,7 @@
 			width: 100%;
 			height: 100%;
 		}
+
 		#pt-notifications-notice {
 			display: none;
 		}
