[refactor] Pull CSS out of index.html

--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,5 @@
+@import 'index-v1.less';
+
 @font-face {
 	font-family: 'Roboto Mono';
 	src: url('RobotoMono.ttf')  format('truetype');
@@ -7,7 +9,6 @@ body {
 	background: #e80447;
 	color: white;
 	font-family: 'Roboto Mono', sans-serif;
-	margin: 0;
 }
 
 * {
