--- a/src/components/NavPanel.less
+++ b/src/components/NavPanel.less
@@ -14,6 +14,11 @@ nav {
 		content: '';
 		left: 0;
 	}
+
+	> div,
+	> a {
+		justify-content: flex-start;
+	}
 }
 
 nav,
@@ -43,9 +48,8 @@ header {
 		color: #000;
 		display: flex;
 		text-transform: uppercase;
-		font-size: 30px;
+		font-size: 1.875em; // ( 30/16 ) em;
 		padding: 30px;
-		display: flex;
 		justify-content: flex-end;
 		height: 100%;
 
@@ -73,13 +77,6 @@ header {
 	}
 }
 
-nav {
-	> div,
-	> a {
-		justify-content: flex-start;
-	}
-}
-
 #explore:hover,
 .page--skin + nav #explore,
 .page--explore + nav #explore {
@@ -95,30 +92,33 @@ header div {
 	padding: 30px;
 	padding: 30px;
 	text-transform: uppercase;
-	font-size: 14px;
+	font-size: 1.142em; // (16/14) em;
 }
 
 @media all and ( max-width: 1400px ) {
-	nav, header {
+	nav,
+	header {
 		border-bottom: solid 3px #000;
 		width: 100%;
 	}
+
 	body {
 		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
+		flex-flow: row wrap;
 	}
+
 	main {
 		order: 2;
 	}
 }
+
 @media all and ( min-width: 1400px ) {
 	nav,
 	header {
 		height: 100%;
 		position: relative;
 		width: 300px;
-		flex-flow: column;
+		flex-direction: column;
 
 		&:before,
 		&:after {
