Change home page copy

--- a/src/components/NavPanel.less
+++ b/src/components/NavPanel.less
@@ -136,7 +136,7 @@ header div {
 			width: 100%;
 		}
 
-		a:first-child {
+		> a:first-child {
 			align-items: flex-end;
 			border-bottom: solid 2px #000;
 		}
