change button states

--- a/src/variables.less
+++ b/src/variables.less
@@ -1,8 +1,10 @@
 @color-create-main: #B9D1CA;
 @color-create-dark: #9FBBB4;
+@color-create-darkest: #8BA39D;
 @color-white: #fff;
 @color-create-light: #E3F0ED;
 @color-explore-light: #FAF0E9;
 @color-explore-main: #E4DCD5;
 @color-explore-dark: #D2C6BD;
 @color-explore-darkest: #B4AAA4;
+@color-reset: #F41A0C;
