--- a/src/index.less
+++ b/src/index.less
@@ -36,15 +36,15 @@ body {
 }
 
 main {
-	max-width: 840px;
+	min-width: 300px;
 }
 
-@media all and ( min-width: 1400px ) {
+@media all and ( min-width: 800px ) {
 	body {
 		display: flex;
-		max-width: 1440px;
 		margin: auto;
 		justify-content: center;
+		font-size: unit( ( 14 / 16 ), em );
 	}
 
 	main,
