--- a/src/components/NavPanel.less
+++ b/src/components/NavPanel.less
@@ -152,6 +152,7 @@ header div {
 			position: absolute;
 			height: @height-nav-link-border * 2;
 			border-left: solid 2px #000;
+			z-index: 1;
 		}
 
 		> div,
