--- a/src/starter-template/components/AdminBar.less
+++ b/src/starter-template/components/AdminBar.less
@@ -56,6 +56,7 @@ html {
 	display: flex;
 	justify-content: flex-end;
 	height: 100%;
+	padding-right: 50px;
 
 	> a {
 		display: block;
@@ -82,6 +83,7 @@ html {
 	background-repeat: no-repeat;
 	height: 100%;
 	background-position: center;
+	margin: 0;
 
 	a {
 		color: transparent;
