--- a/src/starter-template/components/EditBar.less
+++ b/src/starter-template/components/EditBar.less
@@ -4,10 +4,10 @@
 
 .mw-edit-bar {
 	list-style: none;
-	margin: 0;
+	margin: 20px 0 0;
 	background: #000;
 	display: flex;
-	padding: 0;
+	padding: 10px;
 	align-items: center;
 
 	li {
