--- a/src/starter-template/components/EditBar.less
+++ b/src/starter-template/components/EditBar.less
@@ -5,7 +5,7 @@
 .mw-edit-bar {
 	list-style: none;
 	margin: 20px 0 0;
-	background: #000;
+	background: transparent;
 	display: flex;
 	padding: 10px;
 	align-items: center;
