--- a/src/starter-template/components/AdminBarHome.less
+++ b/src/starter-template/components/AdminBarHome.less
@@ -28,6 +28,8 @@
 	}
 
 	.searchButton {
+		background-color: transparent;
+		border: 0;
 		background-image: url( "data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='white'%3E%3Ctitle%3E search %3C/title%3E%3Cpath fill-rule='evenodd' d='M12.2 13.6a7 7 0 111.4-1.4l5.4 5.4-1.4 1.4-5.4-5.4zM13 8A5 5 0 113 8a5 5 0 0110 0z'/%3E%3C/svg%3E%0A" );
 		width: 40px;
 		background-position: center center;
