Add CompactFooter component, add class to AdminBar

--- a/src/starter-template/components/AdminBar.mustache
+++ b/src/starter-template/components/AdminBar.mustache
@@ -1,4 +1,4 @@
-<div class="mw-adminbar">
+<div class="mw-adminbar {{#is-anon}}mw-adminbar--anon{{/is-anon}}">
     <div class="mw-adminbar-start">
         {{>AdminBarHome}}
     </div>
