Add CategoryPortlet to skin builder

--- a/src/starter-template/components/ContentBody.mustache
+++ b/src/starter-template/components/ContentBody.mustache
@@ -1,3 +1,5 @@
 {{{html-body-content}}}
-{{#html-categories}}{{{.}}}{{/html-categories}}
+{{#data-portlets}}
+{{>CategoryPortlet}}
+{{/data-portlets}}
 {{{html-after-content}}}
