Update admin bar components

--- a/src/starter-template/components/AdminBarUser.less
+++ b/src/starter-template/components/AdminBarUser.less
@@ -18,6 +18,7 @@
 
 #pt-notifications-alert {
 	padding-top: 5px;
+	width: 40px;
 	display: block;
 	height: 100%;
 	box-sizing: border-box;
@@ -25,6 +26,8 @@
 	a {
 		// stylelint-disable-next-line declaration-no-important
 		height: 100% !important;
+		margin: auto !important;
+		opacity: 1 !important;
 		background-repeat: no-repeat;
 	}
 }
