Add AdminBar component styling

--- a/src/starter-template/components/AdminBar.less
+++ b/src/starter-template/components/AdminBar.less
@@ -43,6 +43,10 @@ html {
 		cursor: pointer;
 		background-color: #333;
 	}
+
+	.mw-edit-bar {
+		background-color: transparent;
+	}
 }
 
 .mw-adminbar-start {
