Tweak CategoryPlain component

--- a/src/starter-template/components/CategoryPlain.mustache
+++ b/src/starter-template/components/CategoryPlain.mustache
@@ -3,7 +3,7 @@
 	data-mw="interface">
     {{^data-category-normal}}{{msg-skinname-no-categories}}{{/data-category-normal}}
     {{#data-category-normal}}
-	<ul class="{{class}}"">
+	<ul class="{{class}}">
 	{{{html-items}}}
 	{{/data-category-normal}}
 	{{#data-category-hidden}}
