Don't show categories on non-articles

--- a/src/starter-template/components/CategoryPortlet.mustache
+++ b/src/starter-template/components/CategoryPortlet.mustache
@@ -1,3 +1,4 @@
+{{#is-article}}
 <div id="catlinks" class="catlinks" data-mw="interface">
 	{{#data-category-normal}}
 	<div id="{{id}}" class="{{class}}">
@@ -15,3 +16,4 @@
 	</div>
 	{{/data-category-hidden}}
 </div>
+{{/is-article}}
