--- a/src/starter-template/components/Logo.less
+++ b/src/starter-template/components/Logo.less
@@ -1,5 +1,4 @@
 #p-logo {
-	min-width: 240px;
 	min-height: 70px;
 	flex-grow: 1;
 
@@ -8,6 +7,10 @@
 		margin: 0;
 		border: 0;
 		padding: 0 0 0 10px;
+	}
+
+	img {
+		max-width: none;
 	}
 
 	a {
