Default skin template should not overlap hamburger and logo

--- a/src/pages/assets/skin.less
+++ b/src/pages/assets/skin.less
@@ -48,6 +48,7 @@ a {
 	align-items: center;
 	position: relative;
 	z-index: 3;
+	padding-left: 50px;
 
 	@media ( max-width: @width-breakpoint-tablet ) {
 		padding: 1em 8px;
