Make tabs black

--- a/src/variables.less
+++ b/src/variables.less
@@ -2,6 +2,7 @@
 @color-create-dark: #9FBBB4;
 @color-create-darkest: #8BA39D;
 @color-white: #fff;
+@color-black: #000;
 @color-create-light: #E3F0ED;
 @color-explore-light: #FAF0E9;
 @color-explore-main: #E4DCD5;
