Skin editor supports table of contents

--- a/src/pages/assets/skin.mustache
+++ b/src/pages/assets/skin.mustache
@@ -15,6 +15,7 @@
 		{{>ContentActions}}
 	</header>
 	{{>ContentBody}}
+	{{#data-toc}}{{>TableOfContents}}{{/data-toc}}
 </main>
 <nav>
 	{{>Languages}}
