--- a/src/starter-template/components/TableOfContents.less
+++ b/src/starter-template/components/TableOfContents.less
@@ -1,4 +1,4 @@
-#toc {
+#toc-sticky {
     position: fixed;
     padding: 8px;
     top: 0;
@@ -21,6 +21,7 @@
         background: @background-color-article;
         text-align: center;
         padding: 10px;
+        margin: 0;
     }
 
     input {
