--- a/src/starter-template/components/AdminBarHome.less
+++ b/src/starter-template/components/AdminBarHome.less
@@ -22,8 +22,8 @@
 	}
 
 	.mw-adminbar-search__input {
-		color: white;
-		background: black;
+		color: #fff;
+		background: #000;
 		opacity: 1;
 	}
 
@@ -45,6 +45,7 @@
 	& + .mw-adminbar-search__input {
 		display: none;
 	}
+
 	&:checked + .mw-adminbar-search__input {
 		display: block;
 	}
