Add github badge

--- a/src/index.less
+++ b/src/index.less
@@ -39,6 +39,12 @@ main {
 	min-width: 300px;
 }
 
+.github-badge {
+	position: fixed;
+	bottom: 8px;
+	right: 8px;
+}
+
 @media all and ( min-width: 800px ) {
 	body {
 		display: flex;
