--- a/src/index.less
+++ b/src/index.less
@@ -35,7 +35,7 @@ body {
 	margin: 0;
 }
 
-main {
+#app {
 	min-width: 300px;
 }
 
@@ -53,7 +53,7 @@ main {
 		font-size: unit( ( 14 / 16 ), em );
 	}
 
-	main,
+	#app,
 	body,
 	html {
 		box-sizing: content-box;
